Fixed styles for scrollbar

--- a/src/RecyclerPerfectScroller/styles/styles.css
+++ b/src/RecyclerPerfectScroller/styles/styles.css
@@ -21,20 +21,22 @@
     padding-right: 2px;
     right: 0;
     top: 0;
-    background-color: rgba(125, 125, 125, 0);
+    background-color: rgba(238, 238, 238, 0);
     transition: all 300ms ease;
 }
 .recycler-scroll-width>.recycler-scroll-bar>.scroll-bar-thumb {
     width: 100%;
     background-color: rgba(0, 0, 0, 0.2);
     transition: background-color 300ms ease;
+    /*transition: background-color .2s linear, width .2s ease-in-out;*/
     /*min-height: 20px;*/
     border-radius: 6px;
     position: relative;
 }
 .recycler-scroll-width>.recycler-scroll-bar:hover {
     width: 15px;
-    background-color: rgba(125, 125, 125, 0.2);
+    /*background-color: rgba(125, 125, 125, 0.2);*/
+    background-color: rgba(238, 238, 238, 0.5);
     padding: 0 2px;
     right: 0;
 }
